--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "PyFHD"
-version = "1.0"
+version = "1.0.0"
 readme = "README.md"
 license = { file = "LICENSE" }
 description = "Python Fast Holograhic Deconvolution: A Python package that does fast-mode Epoch of Reionization analysis."
@@ -60,19 +60,25 @@ dev = [
 ]
 
 [build-system]
-requires = ["hatchling", "hatch-build-scripts"]
+requires = ["hatch-build-scripts", "hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build]
+ignore-vcs = true
+include = ["PyFHD/**", "PyFHD/__git__.py"]
+exclude = ["mwa_full_embedded_element_pattern.h5", "*.pyc"]
+
 
 [[tool.hatch.build.hooks.build-scripts.scripts]]
 out_dir = "."
 work_dir = "."
 artifacts = [
-    "__git__.py"
+    "PyFHD/__git__.py"
 ]
 commands = [
     'echo __git_commit__ = \"$(git rev-parse HEAD)\" > PyFHD/__git__.py',
     'echo __git_commit_date__ = \"$(git log -1 --format=%cd)\" >> PyFHD/__git__.py',
-    'echo __git_branch__ = \"$(git rev-parse --abbrev-ref HEAD)\" >> PyFHD/__git__.py'
+    'echo __git_branch__ = \"$(git rev-parse --abbrev-ref HEAD)\" >> PyFHD/__git__.py',
 ]
 clean_artifacts = true
 
