--- a/PyFHD/resources/config/pyfhd.yaml
+++ b/PyFHD/resources/config/pyfhd.yaml
@@ -45,7 +45,6 @@ calibrate-visibilities : true
 cable-bandpass-fit : true # Depends on instrument cable length text file
 cal-bp-transfer : ~
 calibration-polyfit : true
-allow-sidelobe-cal-sources : true
 cal-amp-degree-fit : 2
 cal-phase-degree-fit : 1
 cal-reflection-hyperresolve : true
@@ -66,13 +65,8 @@ auto-ratio-calibration: true
 cal-time-average: false
 # Only set to true if you're using MWA data before date 2014-07-23 (23rd July 2014)
 digital-gain-jump-polyfit: false
-return-cal-visibilities : true
-calibration-flag-iterate : 0
-diffuse-calibrate : ~
-calibration-catalog-file-path  :  ~ # 'GLEAM_v2_plus_rlb2019.sav' (FHD Default)
 transfer-calibration : ~
 cal-stop : false
-transfer-model-uv : ~
 max-cal-iter: 100
 
 # Flagging
@@ -98,13 +92,13 @@ grid-variance: true
 grid-uniform: false
 
 # Deconvolution
-deconvolve : false
-max-deconvolution-components : 20000
-filter-background : true
-smooth-width : 32
-dft-threshold : true
-return-decon-visibilities : false
-deconvolution-filter : 'filter_uv_uniform'
+# deconvolve : false
+# max-deconvolution-components : 20000
+# filter-background : true
+# smooth-width : 32
+# dft-threshold : true
+# return-decon-visibilities : false
+# deconvolution-filter : 'filter_uv_uniform'
 
 # Export
 output-path : './output'
@@ -133,18 +127,16 @@ model-file-type : 'sav'
 # If you set model-file-type to uvfits or HDF5, set import-model-uvfits to the (ideally absolute) path of the fits file
 # If model-file-type is set to sav then it will look for the sav files as said in the function import_vis_model_from_sav
 model-file-path: './input'
-diffuse-model : ~
-model-catalog-file-path  :  ~ # 'GLEAM_v2_plus_rlb2019.sav' (FHD Default)
 allow-sidelobe-model-sources : false
 
 # Simulation
-run-simulation : false
-in-situ-sim-input : ~
-eor-vis-filepath : ~
-enhance-eor : 1
-sim-noise : ~
-tile-flag-list : ~
-remove-sim-flags : false
+# run-simulation : false
+# in-situ-sim-input : ~
+# eor-vis-filepath : ~
+# enhance-eor : 1
+# sim-noise : ~
+# tile-flag-list : ~
+# remove-sim-flags : false
 
 # HEALPIX
 ps-kbinsize : 0.5
