--- a/PyFHD/resources/1088285600_example/1088285600_example.yaml
+++ b/PyFHD/resources/1088285600_example/1088285600_example.yaml
@@ -45,7 +45,6 @@ calibrate-visibilities : true
 cable-bandpass-fit : false # Depends on instrument cable length text file
 cal-bp-transfer : ~
 calibration-polyfit : true
-allow-sidelobe-cal-sources : true
 cal-amp-degree-fit : 2
 cal-phase-degree-fit : 1
 cal-reflection-hyperresolve : false
@@ -65,8 +64,6 @@ bandpass-calibrate : true
 auto-ratio-calibration: true
 cal-time-average: false
 digital-gain-jump-polyfit: false
-return-cal-visibilities : false
-calibration-flag-iterate : 0
 diffuse-calibrate : ~
 calibration-catalog-file-path  :  ~ # 'GLEAM_v2_plus_rlb2019.sav' (FHD Default)
 transfer-calibration : ~
@@ -98,18 +95,17 @@ grid-variance: true
 grid-uniform: false
 
 # Deconvolution
-deconvolve : false
-max-deconvolution-components : 20000
-filter-background : true
-smooth-width : 32
-dft-threshold : true
-return-decon-visibilities : false
-deconvolution-filter : 'filter_uv_uniform'
+# deconvolve : false
+# max-deconvolution-components : 20000
+# filter-background : true
+# smooth-width : 32
+# dft-threshold : true
+# return-decon-visibilities : false
+# deconvolution-filter : 'filter_uv_uniform'
 
 # Export
 output-path : './output'
 export-images : true
-cleanup : false
 save-obs: true
 save-params: true
 save-cal: true
@@ -138,13 +134,13 @@ model-catalog-file-path  :  ~ # 'GLEAM_v2_plus_rlb2019.sav' (FHD Default)
 allow-sidelobe-model-sources : false
 
 # Simulation
-run-simulation : false
-in-situ-sim-input : ~
-eor-vis-filepath : ~
-enhance-eor : 1
-sim-noise : ~
-tile-flag-list : ~
-remove-sim-flags : false
+# run-simulation : false
+# in-situ-sim-input : ~
+# eor-vis-filepath : ~
+# enhance-eor : 1
+# sim-noise : ~
+# tile-flag-list : ~
+# remove-sim-flags : false
 
 # HEALPIX
 ps-kbinsize : 0.5
