Making the tutorial ones run again with the sample data

--- a/PyFHD/resources/1088285600_example/1088285600_example.yaml
+++ b/PyFHD/resources/1088285600_example/1088285600_example.yaml
@@ -99,7 +99,7 @@ grid-uniform: false
 # max-deconvolution-components : 20000
 # filter-background : true
 # smooth-width : 32
-# dft-threshold : true
+dft-threshold : true
 # return-decon-visibilities : false
 # deconvolution-filter : 'filter_uv_uniform'
 
