--- a/PyFHD/resources/config/pyfhd.yaml
+++ b/PyFHD/resources/config/pyfhd.yaml
@@ -96,14 +96,13 @@ grid-uniform: false
 # max-deconvolution-components : 20000
 # filter-background : true
 # smooth-width : 32
-# dft-threshold : true
+dft-threshold : true
 # return-decon-visibilities : false
 # deconvolution-filter : 'filter_uv_uniform'
 
 # Export
 output-path : './output'
 export-images : true
-cleanup : false
 save-obs: true
 save-params: true
 save-cal: true
