--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.10.17, 3.11.12, 3.12.7]
+        python-version: [3.10.17, 3.11.12, 3.12.7, 3.13.3]
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -42,14 +42,14 @@ jobs:
           sed -i 's/<title id="head-title">pyfhd_report.html<\/title>/<title id="head-title">PyFHD GitHub Actions Unit Test Report<\/title>/' pyfhd_report.html
     
       - name: Upload Unit Test HTML Report
-        if: ${{ matrix.python-version == '3.12' }}
+        if: ${{ matrix.python-version == '3.13.3' }}
         uses: actions/upload-artifact@v4
         with:
           name: unit-test-report
           path: pyfhd_report.html
 
       - name: Upload Coverage HTML Report Directory
-        if: ${{ matrix.python-version == '3.12' }}
+        if: ${{ matrix.python-version == '3.13.3' }}
         uses: actions/upload-artifact@v4
         with:
           name: coverage-html-report
