Small Changes in tutorial

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ astropy==7.1.0
     # via
     #   pyfhd (pyproject.toml)
     #   healpy
+    #   pyuvdata
 astropy-iers-data==0.2025.6.9.14.9.37
     # via astropy
 colorama==0.4.6
@@ -14,10 +15,14 @@ contourpy==1.3.2
     # via matplotlib
 cycler==0.12.1
     # via matplotlib
+docstring-parser==0.16
+    # via pyuvdata
 fonttools==4.58.2
     # via matplotlib
 h5py==3.14.0
-    # via pyfhd (pyproject.toml)
+    # via
+    #   pyfhd (pyproject.toml)
+    #   pyuvdata
 healpy==1.18.1
     # via pyfhd (pyproject.toml)
 importlib-resources==6.5.2
@@ -29,7 +34,9 @@ llvmlite==0.44.0
 matplotlib==3.10.3
     # via pyfhd (pyproject.toml)
 numba==0.61.2
-    # via pyfhd (pyproject.toml)
+    # via
+    #   pyfhd (pyproject.toml)
+    #   pyuvdata
 numpy==2.2.6
     # via
     #   pyfhd (pyproject.toml)
@@ -40,22 +47,36 @@ numpy==2.2.6
     #   matplotlib
     #   numba
     #   pyerfa
+    #   pyuvdata
     #   scipy
 packaging==25.0
     # via
     #   astropy
     #   matplotlib
+    #   setuptools-scm
 pillow==11.2.1
     # via matplotlib
 pyerfa==2.0.1.5
-    # via astropy
+    # via
+    #   astropy
+    #   pyuvdata
 pyparsing==3.2.3
     # via matplotlib
 python-dateutil==2.9.0.post0
     # via matplotlib
-pyyaml==6.0.2
-    # via astropy
-scipy==1.15.3
+pyuvdata==3.2.2
     # via pyfhd (pyproject.toml)
+pyyaml==6.0.2
+    # via
+    #   astropy
+    #   pyuvdata
+scipy==1.15.3
+    # via
+    #   pyfhd (pyproject.toml)
+    #   pyuvdata
+setuptools==80.9.0
+    # via setuptools-scm
+setuptools-scm==8.3.1
+    # via pyuvdata
 six==1.17.0
     # via python-dateutil
