--- a/.dockerignore
+++ b/.dockerignore
@@ -21,8 +21,8 @@ root/.cache/
 
 # Ignore all of input/ except your instrument config
 input/**
-!input/instrument_config.yaml
-!input/1088285600_example
 
 # Test Data
 PyFHD/resources/test_data/**/*
+
+# git
