--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ dev = [
     "myst-parser>=4.0.1",
     "pip>=25.1.1",
     "pre-commit>=4.2.0",
+    "pyinstrument>=5.0.2",
     "pytest>=8.3.5",
     "pytest-cov>=6.1.1",
     "pytest-html>=4.1.1",
