permissions didn't work, doing it with token directly

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,4 +31,6 @@ jobs:
                 uv build -v
 
             - name: Publish to PyPI
+              env:
+                UV_PUBLISH_TOKEN: ${{ secrets.UV_PUBLISH_TOKEN }}
               run: uv publish --trusted-publishing automatic
